# meshcat-python

./: .gitignore  .venv  =0.0.12  =0.115.12  =0.21.2  =1.4.0  =2.11.4  =2.19.1  =2.2.1  =2.2.5  =3.10  =4.6.8  =7.0.0  =8.2.3  =8.3.5  pyproject.toml
examples/: box.py  points.py
src/meshcat/: commands.py  geometry.py  path.py  transformations.py  visualizer.py
src/meshcat/servers/: oldzmqserver.py  tree.py  zmqserver.py
src/meshcat/tests/: dummy_websocket_client.py  test_drawing.py  test_ports.py
